# forg_bot

./: .gitmodules  .zshrc  Dockerfile  README.md  docker-compose.local.yml  docker_build.sh  docker_exec.sh  justfile  x11run.sh
forg_bringup/: CMakeLists.txt  package.xml
forg_description/: CMakeLists.txt  README.md  package.xml
forg_description/config/: gazebo_ros2_control.yaml  gz_ros2_control.yaml
forg_description/launch/: display.launch.py  robot_state_publisher.launch.py
forg_description/meshes/: back_arm.dae  back_arm.stl  front_arm.dae  front_arm.stl  left_back_arm.dae  left_front_arm.dae  middle_arm.dae  middle_arm.stl  right_back_arm.dae  right_front_arm.dae  shoulder_axis.dae  shoulder_axis.stl  spine.dae  spine.stl  steering_base.dae  steering_base.stl  steering_gear.dae  steering_gear.stl  wheel.dae  wheel.stl  wheel_axis.dae  wheel_axis.stl  wheel_steering.dae  wheel_steering.stl
forg_description/meshes/FreeCAD/: arm_assembly.FCStd  back_arm.FCStd  front_arm.FCStd  left_back_arm.FCStd  left_front_arm.FCStd  middle_arm.FCStd  right_back_arm.FCStd  right_front_arm.FCStd  shoulder_axis.FCStd  spine.FCStd  steering_base.FCStd  steering_gear.FCStd  wheel.FCStd  wheel_assembly.FCStd  wheel_axis.FCStd  wheel_steering.FCStd
forg_description/rviz/: display.rviz
forg_description/urdf/: back_arm.urdf.xacro  base.urdf.xacro  forg_bot.urdf.xacro  forg_core.urdf.xacro  inertial_macros.urdf.xacro  left_back_arm.urdf.xacro  left_front_arm.urdf.xacro  left_middle_arm.urdf.xacro  lidar.urdf.xacro  middle_arm.urdf.xacro  mimic_joint_plugin_macro.urdf.xacro  right_back_arm.urdf.xacro  right_front_arm.urdf.xacro  right_middle_arm.urdf.xacro  ros2_control.urdf.xacro  wheel.urdf.xacro  wheel_steering.urdf.xacro
forg_navigation/: CMakeLists.txt  package.xml
forg_navigation/config/: nav2_params.yaml
forg_navigation/launch/: navigation.launch.py
forg_simulation/: CMakeLists.txt  package.xml
forg_simulation/config/: gazebo.yaml  gz_bridge.yaml
forg_simulation/launch/: display_kinematics.launch.py  gazebo.launch.py
forg_simulation/rviz/: display.rviz
forg_simulation/src/: holonomic_rover_kinematics.cpp
forg_simulation/worlds/: empty.world
holonomic_rover_controller/: CMakeLists.txt  README.md  holonomic_rover_controller.xml  package.xml
holonomic_rover_controller/include/holonomic_rover_controller/: holonomic_rover_controller.hpp  visibility_control.h
holonomic_rover_controller/src/: holonomic_rover_controller.cpp  holonomic_rover_controller.yaml
mimic_joint_plugin_gazebo/: CMakeLists.txt  package.xml
mimic_joint_plugin_gazebo/ament-env-hooks/: mimic_joint_plugin_gazebo_plugin_path.dsv.in
mimic_joint_plugin_gazebo/include/mimic_joint_plugin_gazebo/: mimic_joint_plugin.hpp
mimic_joint_plugin_gazebo/src/: mimic_joint_plugin.cpp
msg_utils/: CMakeLists.txt  package.xml
msg_utils/src/: odom_to_tf2.cpp  stamp_twist.cpp
